<resources>
    <string name="app_name">Conversation</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_friends">Friends</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="text_add_friend">Add Friend</string>
    <string name="text_search_by_username">Search by Username</string>
    <string name="no_user_found">No User Found</string>
    <string name="you_already_friend_with">You already friend with\n%s</string>
    <string name="text_chat">Chat</string>
    <string name="text_unfriend">Unfriend</string>
    <string name="text_send">Send</string>
</resources>
