<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.chattingapp.model.User">
        </variable>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorOrange">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.4"
            android:gravity="center">

            <ImageView
                android:layout_width="1320dp"
                android:layout_height="132dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_chat"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/dimen_text_48sp"
                android:layout_marginEnd="@dimen/dimen_text_48sp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_marginBottom="@dimen/dimen_8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/name"
                        android:text="@={viewModel.name}"
                        android:inputType="text"
                        android:textColor="@color/colorWhite"
                        android:padding="@dimen/dimen_16dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_marginBottom="@dimen/dimen_8dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/username"
                        android:text="@={viewModel.username}"
                        android:inputType="text"
                        android:textColor="@color/colorWhite"
                        android:padding="@dimen/dimen_16dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/LoginTextInputLayoutStyle">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="Password"
                        android:text="@={viewModel.password}"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite"
                        android:padding="@dimen/dimen_16dp"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_18sp"
                    android:layout_margin="@dimen/dimen_8dp" />

                <Button
                    android:id="@+id/btnGotoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:text="@string/already_have_an_account_login_here"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen_text_16sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>