<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.chattingapp.model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorOrange">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_back"
                    android:paddingLeft="@dimen/dimen_12dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center_vertical"
                android:text="@string/text_add_friend"
                android:textColor="@color/colorWhite"
                android:textSize="32sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dimen_48dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AddFriendTextInputLayoutStyle">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack"
                        android:text="@={viewModel.username}"
                        android:backgroundTint="@color/colorOrange"
                        android:hint="@string/text_search_by_username"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.8"
                android:background="@drawable/border"
                android:layout_margin="@dimen/dimen_4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="4dp">

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:background="@drawable/ic_search"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="@dimen/dimen_72dp"
                android:layout_height="@dimen/dimen_72dp"
                android:layout_gravity="center"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/rl_noUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorRed"
                        android:text="@string/no_user_found"
                        android:textAlignment="center"
                        android:textStyle="italic"
                        android:textSize="@dimen/dimen_text_16sp"/>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_userFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.name}"
                        android:textSize="@dimen/dimen_text_24sp"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/dimen_16dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btnAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:background="@color/colorOrange"
                            android:text="@string/text_add_friend"
                            android:textColor="@color/colorWhite"
                            android:textAllCaps="false"
                            android:textSize="@dimen/dimen_text_20sp"
                            android:paddingLeft="@dimen/dimen_12dp"
                            android:paddingRight="@dimen/dimen_12dp"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_similarUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.name}"
                        tools:text="Victor"
                        android:textSize="@dimen/dimen_text_32sp"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{@string/you_already_friend_with(viewModel.name)}"
                            android:textColor="@color/colorRed"
                            android:textAlignment="center"
                            android:textStyle="italic"
                            android:textSize="@dimen/dimen_text_12sp"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</layout>